--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -17,13 +17,22 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.6.2",
     "save": "^2.4.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "webpack":"webpack",
-    "start": "webpack serve --mode=development"
+    "webpack": "webpack",
+    "start": "webpack serve --mode=development",
+    "build": "webpack --mode=production",
+    "lint": "npx eslint ./src --ext .js,.jsx --fix"
   }
 }
