--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^4.3.8",
     "prettier": "^2.6.2",
     "save": "^2.4.0",
     "webpack": "^5.72.0",
@@ -34,5 +35,9 @@
     "start": "webpack serve --mode=development",
     "build": "webpack --mode=production",
     "lint": "npx eslint ./src --ext .js,.jsx --fix"
+  },
+  "husky": {
+    "pre-commit":"npm run lint",
+    "pre-push":"npm run lint"
   }
 }
