--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -37,7 +37,9 @@
     "lint": "npx eslint ./src --ext .js,.jsx --fix"
   },
   "husky": {
-    "pre-commit":"npm run lint",
-    "pre-push":"npm run lint"
+    "hooks": {
+      "pre-commit":"npm run lint",
+      "pre-push":"npm run lint"
+    }
   }
 }
