--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -49,9 +49,11 @@
     "build": "webpack --mode=production",
     "lint": "npx eslint ./src --ext .js,.jsx --fix",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy-storybook": "npm run build-storybook",
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "build-storybook": "build-storybook -s public"
   },
   "husky": {
     "hooks": {
