--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "babel": "^6.23.0",
-    "jest": "^27.5.1",
+    "babel-jest": "^27.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
@@ -28,6 +27,7 @@
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.4.21",
     "@storybook/testing-library": "^0.0.9",
+    "@testing-library/react": "^13.0.1",
     "babel-loader": "^8.2.4",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
@@ -39,6 +39,7 @@
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.3.8",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "save": "^2.4.0",
     "webpack": "^5.72.0",
@@ -54,7 +55,10 @@
     "deploy": "gh-pages -d build",
     "predeploy-storybook": "npm run build-storybook",
     "deploy-storybook": "gh-pages -d storybook-static",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors"
   },
   "husky": {
     "hooks": {
@@ -73,5 +77,8 @@
         }
       }
     ]
-  }
+  },
+  "jest":{
+    "testEnvironment": "jsdom"
+}
 }
