--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.3.8",
     "jest": "^27.5.1",
+    "loki": "^0.29.0",
     "prettier": "^2.6.2",
     "save": "^2.4.0",
     "webpack": "^5.72.0",
@@ -58,7 +59,10 @@
     "build-storybook": "build-storybook -s public",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors"
+    "test:coverage": "jest --coverage --colors",
+    "loki:update":"npm run build-storybook && loki update --requireReference --reactUri file:./storybook-static",
+    "loki:test":"npm run build-storybook && loki test --requireReference --reactUri file:./storybook-static",
+    "loki:approve":"loki approve"
   },
   "husky": {
     "hooks": {
@@ -78,7 +82,22 @@
       }
     ]
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "jsdom"
-}
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.app",
+        "preset": "iPhone 7"
+      }
+    }
+  }
 }
