--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -3,10 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "babel": "^6.23.0",
     "babel-jest": "^27.5.1",
+    "nanoid": "^3.3.2",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
@@ -17,6 +28,7 @@
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@storybook/addon-actions": "^6.4.21",
     "@storybook/addon-essentials": "^6.4.21",
     "@storybook/addon-interactions": "^6.4.21",
@@ -43,6 +55,7 @@
     "loki": "^0.29.0",
     "prettier": "^2.6.2",
     "save": "^2.4.0",
+    "typescript": "^4.6.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
@@ -60,9 +73,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors",
-    "loki:update":"npm run build-storybook && loki update --requireReference --reactUri file:./storybook-static",
-    "loki:test":"npm run build-storybook && loki test --requireReference --reactUri file:./storybook-static",
-    "loki:approve":"loki approve"
+    "loki:update": "npm run build-storybook && loki update --requireReference --reactUri file:./storybook-static",
+    "loki:test": "npm run build-storybook && loki test --requireReference --reactUri file:./storybook-static",
+    "loki:approve": "loki approve"
   },
   "husky": {
     "hooks": {
