--- a/Lesson-II/homework/package.json
+++ b/Lesson-II/homework/package.json
@@ -48,14 +48,19 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.5.8",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.3.8",
     "jest": "^27.5.1",
     "loki": "^0.29.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
+    "sass-loader": "^12.6.0",
     "save": "^2.4.0",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "typescript": "^4.6.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
