--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/testing-library": "^0.0.9",
     "@testing-library/react": "^13.0.1",
     "babel-loader": "^8.2.4",
+    "chromatic": "^6.5.4",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.1.4",
@@ -83,7 +84,8 @@
     "test:coverage": "jest --coverage --colors",
     "loki:update": "npm run build-storybook && loki update --requireReference --reactUri file:./storybook-static",
     "loki:test": "npm run build-storybook && loki test --requireReference --reactUri file:./storybook-static",
-    "loki:approve": "loki approve"
+    "loki:approve": "loki approve",
+    "chromatic": "npx chromatic --project-token=6c53495696e3"
   },
   "husky": {
     "hooks": {
