--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://de3viator.github.io/React-Lesson-II/",
@@ -60,6 +61,7 @@
     "loki": "^0.29.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
+    "react-redux": "^8.0.1",
     "sass-loader": "^12.6.0",
     "save": "^2.4.0",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
